--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,9 @@ test/unit/coverage
 test/e2e/reports
 selenium-debug.log
 
+#环境配置
+server/Config/ENV.js
+
 # Editor directories and files
 .idea
 .vscode
