--- a/package.json
+++ b/package.json
@@ -15,12 +15,14 @@
   },
   "dependencies": {
     "axios": "^0.17.0",
+    "cheerio": "^1.0.0-rc.2",
     "element-ui": "^2.0.3",
     "koa": "^2.3.0",
     "koa-router": "^7.2.1",
     "koa-static": "^4.0.1",
     "koa2-cors": "^2.0.4",
     "mongoose": "^4.13.2",
+    "superagent": "^3.8.1",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1"
   },
