--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "cheerio": "^1.0.0-rc.2",
     "element-ui": "^2.0.3",
     "koa": "^2.3.0",
+    "koa-bodyparser": "^4.2.0",
     "koa-router": "^7.2.1",
     "koa-static": "^4.0.1",
     "koa2-cors": "^2.0.4",
