--- a/package.json
+++ b/package.json
@@ -17,12 +17,16 @@
     "axios": "^0.17.0",
     "cheerio": "^1.0.0-rc.2",
     "element-ui": "^2.0.3",
+    "hiredis": "^0.5.0",
+    "ioredis": "^3.2.2",
     "koa": "^2.3.0",
     "koa-bodyparser": "^4.2.0",
     "koa-router": "^7.2.1",
+    "koa-session2": "^2.2.5",
     "koa-static": "^4.0.1",
     "koa2-cors": "^2.0.4",
     "mongoose": "^4.13.2",
+    "redis": "^2.8.0",
     "superagent": "^3.8.1",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1"
